--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DATABASE_TYPE=postgres
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABSE_USER=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+DB_TYPE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
 APP_PORT=8000
