--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
       "@types/cors": "^2.8.13",
       "@types/node": "^20.4.8",
       "cors": "^2.8.5",
+      "dot-env": "^0.0.1",
+      "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "path": "^0.12.7",
       "pg": "^8.4.0",
