--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
       "dot-env": "^0.0.1",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
+      "express-async-errors": "^3.1.1",
       "path": "^0.12.7",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
+      "ts-node-dev": "^2.0.0",
       "typeorm": "0.3.17",
       "typescript": "^5.1.6",
       "zod": "^3.21.4"
