--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
    "dependencies": {
       "@types/cors": "^2.8.13",
       "@types/node": "^20.4.8",
+      "circular-json": "^0.5.9",
       "cors": "^2.8.5",
       "dot-env": "^0.0.1",
       "dotenv": "^16.3.1",
@@ -16,6 +17,7 @@
       "zod": "^3.21.4"
    },
    "devDependencies": {
+      "@types/circular-json": "^0.4.0",
       "@types/express": "^4.17.17",
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
