--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,25 @@
 {
    "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
+      "target": "es2016",
       "module": "commonjs",
-      "moduleResolution": "node",
-      "outDir": "./dist",
-      "emitDecoratorMetadata": true,
+      "typeRoots": [
+         "src/@types",
+         "node_modules/@types"
+      ],
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "exactOptionalPropertyTypes": true,
+      "skipLibCheck": true,
       "experimentalDecorators": true,
-      "sourceMap": true
-   }
+      "emitDecoratorMetadata": true,
+      "strictPropertyInitialization": false
+   },
+   "include": [
+      "src",
+      "app.ts"
+   ],
+   "exclude": [
+      "node_modules"
+   ]
 }
