--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-   "dependencies": {
-      "@types/cors": "^2.8.13",
-      "@types/node": "^20.4.8",
-      "cors": "^2.8.5",
-      "dot-env": "^0.0.1",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "express-async-errors": "^3.1.1",
-      "path": "^0.12.7",
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "ts-node-dev": "^2.0.0",
-      "typeorm": "0.3.17",
-      "typescript": "^5.1.6",
-      "zod": "^3.21.4"
-   },
-   "devDependencies": {
-      "@types/express": "^4.17.17",
-      "@types/node": "^16.11.10",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
-   },
-   "scripts": {
-      "start": "ts-node src/server.ts",
-      "start:dev": "ts-node-dev --cls --rs --ignore-watch node_modules src/server.ts",
-      "migration:generate": "typeorm-ts-node-commonjs migration:generate ./src/migration/ -d ./src/data-source.ts",
-      "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
-   }
+  "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.8",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.1",
+    "path": "^0.12.7",
+    "pg": "^8.11.2",
+    "reflect-metadata": "^0.1.13",
+    "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.17",
+    "typescript": "^5.1.6",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^16.11.10",
+    "ts-node": "10.7.0",
+    "typescript": "4.5.2"
+  },
+  "scripts": {
+    "start": "ts-node src/server.ts",
+    "start:dev": "ts-node-dev --cls --rs --ignore-watch node_modules src/server.ts",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate ./src/migration/mig -d ./src/data-source.ts",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
+  }
 }
