--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.8",
-    "@types/pg": "^8.10.2",
-    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dot-env": "^0.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -19,17 +11,21 @@
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.17",
-    "typescript": "^5.1.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/pg": "^8.10.2",
     "@types/express": "^4.17.17",
-    "@types/node": "^16.11.10",
+    "@types/node": "^20.4.8",
     "@types/pg-format": "^1.0.2",
     "ts-node": "10.7.0",
-    "typescript": "4.5.2"
+    "typescript": "^5.1.6",
+    "ts-node-dev": "^2.0.0"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
