--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-async-errors": "^3.1.1",
     "format": "^0.2.2",
     "jsonwebtoken": "^9.0.1",
+    "mailgen": "^2.0.27",
+    "nodemailer": "^6.9.4",
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.9",
     "@types/pg-format": "^1.0.2",
     "ts-node": "10.7.0",
     "typescript": "4.5.2"
