--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.8",
+    "@types/node": "^16.11.10",
     "@types/pg": "^8.10.2",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -23,7 +23,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.17",
-    "typescript": "^5.1.6",
+    "typescript": "4.5.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
