--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ APP_PORT=8000
 
 JWT_SECRET_KEY=k3nz13@c4d3my100%duck
 JWT_EXPIRATION_TIME=24h
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_EMAIL=youremail@gmail.com
+SMTP_PASSWORD=yourpassword
+
+FRONTEND_RECOVER_URL=http://your-frontend-url.com/reset-password
