--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,9 @@
-DATABASE_URL="postgres://postgres:9231@127.0.0.1:5432/kenzie_final"
+'DATABASE_URL="postgres://postgres:9231@127.0.0.1:5432/kenzie_final"
 
 APP_PORT=8000
 
-JWT_SECRET_KEY=k3nz13@c4d3my100%duck
+JWT_SECRET_KEY=qualquer coisa
 JWT_EXPIRATION_TIME=24h
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_EMAIL=youremail@gmail.com
-SMTP_PASSWORD=yourpassword
-
-FRONTEND_RECOVER_URL=http://your-frontend-url.com/reset-password
+SMTP_USER=seugmail@gmail.com
+SMTP_PASS=gerar senha de app no gmail
